develop: deliveredOrder added
